--- a/style.css
+++ b/style.css
@@ -238,7 +238,20 @@ button:hover {
         display: none;
     }
 
+    .nav {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    .nav > * {
+        order: 0;
+        /* margin: 0px 2px; */
+      }
+
     .logo {
+        order: 1;
         display: flex;
         text-transform: uppercase;
         font-size: 20px;
@@ -246,6 +259,31 @@ button:hover {
         letter-spacing: 3px;
         cursor: pointer;
         color: #ff004f;
+        margin-left: 1rem;
+    }
+
+    .nav-main {
+        order: 4;
+        flex-basis: 100%;
+        display: flex;
+        justify-content: center;
+        margin-top: -2rem;
+    }
+
+    .nav-links {
+        order: 2;
+        display: flex;
+        align-items: center;
+        margin-right: -18rem;
+    }
+
+    .nav-lang {
+        order: 3;
+        display: flex;
+        align-items: center;
+        margin-right: 8rem;
+        width: 16px;
+        height: 16px;
     }
 
     b {
